--- a/cdn/bibliography.bib
+++ b/cdn/bibliography.bib
@@ -4,3 +4,47 @@
   year={2017},
   publisher={Springer}
 }
+
+@incollection{atzei2017survey,
+  title={A survey of attacks on ethereum smart contracts (sok)},
+  author={Atzei, Nicola and Bartoletti, Massimo and Cimoli, Tiziana},
+  booktitle={Principles of Security and Trust},
+  pages={164--186},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{bhargavan2016formal,
+  title={Formal verification of smart contracts: Short paper},
+  author={Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and others},
+  booktitle={Proceedings of the 2016 ACM Workshop on Programming Languages and Analysis for Security},
+  pages={91--96},
+  year={2016},
+  organization={ACM}
+}
+
+@inproceedings{breidenbach2018enter,
+  title={Enter the Hydra: Towards Principled Bug Bounties and Exploit-Resistant Smart Contracts},
+  author={Breidenbach, Lorenz and Cornell Tech, IC and Daian, Philip and Tramer, Florian and Juels, Ari},
+  booktitle={27th $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 18)},
+  year={2018},
+  organization={USENIX$\}$ Association}
+}
+
+@inproceedings{hirai2017defining,
+  title={Defining the ethereum virtual machine for interactive theorem provers},
+  author={Hirai, Yoichi},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={520--535},
+  year={2017},
+  organization={Springer}
+}
+
+@inproceedings{androulaki2018hyperledger,
+  title={Hyperledger fabric: a distributed operating system for permissioned blockchains},
+  author={Androulaki, Elli and Barger, Artem and Bortnikov, Vita and Cachin, Christian and Christidis, Konstantinos and De Caro, Angelo and Enyeart, David and Ferris, Christopher and Laventman, Gennady and Manevich, Yacov and others},
+  booktitle={Proceedings of the Thirteenth EuroSys Conference},
+  pages={30},
+  year={2018},
+  organization={ACM}
+}
