--- a/cdn/bibliography.bib
+++ b/cdn/bibliography.bib
@@ -1,3 +1,41 @@
+@inproceedings{kiayias2017ouroboros,
+  title={Ouroboros: A provably secure proof-of-stake blockchain protocol},
+  author={Kiayias, Aggelos and Russell, Alexander and David, Bernardo and Oliynykov, Roman},
+  booktitle={Annual International Cryptology Conference},
+  pages={357--388},
+  year={2017},
+  organization={Springer}
+}
+
+
+@article{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi},
+  year={2008},
+  publisher={Working Paper}
+}
+
+@article{szabo1997idea,
+  title={The idea of smart contracts},
+  author={Szabo, Nick},
+  journal={Nick Szabo’s Papers and Concise Tutorials},
+  volume={6},
+  year={1997}
+}
+
+
+@article{veronese2013efficient,
+  title={Efficient byzantine fault-tolerance},
+  author={Veronese, Giuliana Santos and Correia, Miguel and Bessani, Alysson Neves and Lung, Lau Cheuk and Verissimo, Paulo},
+  journal={IEEE Transactions on Computers},
+  volume={62},
+  number={1},
+  pages={16--30},
+  year={2013},
+  publisher={IEEE}
+}
+
+
 @book{dannen2017introducing,
   title={Introducing Ethereum and Solidity},
   author={Dannen, Chris},
@@ -47,4 +85,56 @@
   pages={30},
   year={2018},
   organization={ACM}
+}
+
+@article {42,
+	title = {A Model For Collaborative Blockchain-based Video Delivery Relying On Advanced Network Services Chains},
+	journal = {IEEE Communications Magazine},
+	volume = {55},
+	year = {2017},
+	month = {09/2017},
+	abstract = {The constant rise of Over-The-Top video consumption nowadays challenges the current
+Internet architecture. Content Providers wish to deliver high quality video to an ever growing
+number of consumers while Connectivity Providers lack return on investments on their network
+infrastructure. End-Users contribution to this market is often limited to optimizing data
+reception, neglecting the vast spare capacities available through their network connectivity
+and customer premise equipment. In this paper, we promote a user-centric approach that
+makes this unsuspected pool of resources contributing to the necessary reshaping of the content
+delivery ecosystem. We study how blockchain powered smart-contracts and Network Function
+Virtualization-based service chaining can be exploited to support such novel collaboration
+schemes. Finally, our ndings suggest that the proposed solution can complement existing
+technologies by supporting a wide area of business cases while, at the same time, importantly
+reducing costs.},
+	
+	author = {Nicolas Herbaut and Daniel N{\'e}gru}
+}
+
+
+@article{jentzsch2016decentralized,
+  title={Decentralized autonomous organization to automate governance},
+  author={Jentzsch, Christoph},
+  journal={White paper, November},
+  year={2016}
+}
+
+@inproceedings{xu2016Blockchain,
+  author =        {Xu, Xiwei and Pautasso, Cesare and Zhu, Liming and
+                   Gramoli, Vincent and Ponomarev, Alexander and
+                   Tran, An Binh and Chen, Shiping},
+  booktitle =     {Software Architecture (WICSA), 2016 13th Working
+                   IEEE/IFIP Conference on},
+  organization =  {IEEE},
+  pages =         {182--191},
+  title =         {The blockchain as a software connector},
+  year =          {2016}
+}
+
+@inproceedings{bozic2016tutorial,
+  author =        {Bozic, Nikola and Pujolle, Guy and Secci, Stefano},
+  booktitle =     {Smart Cloud Networks \& Systems (SCNS)},
+  organization =  {IEEE},
+  pages =         {1--8},
+  title =         {A tutorial on blockchain and applications to secure
+                   network control-planes},
+  year =          {2016},
 }
