--- a/cdn/bibliography.bib
+++ b/cdn/bibliography.bib
@@ -13,7 +13,16 @@
   author={Nakamoto, Satoshi},
   year={2008},
   publisher={Working Paper}
+}@article{grzegorczyk2002ordre,
+  title={Ordre juridique comme r{\'e}alit{\'e}},
+  author={Grzegorczyk, Christophe},
+  journal={Droits},
+  number={1},
+  pages={103--118},
+  year={2002},
+  publisher={Presses Universitaires de France}
 }
+
 
 @article{szabo1997idea,
   title={The idea of smart contracts},
@@ -105,7 +114,7 @@ Virtualization-based service chaining can be exploited to support such novel col
 schemes. Finally, our ndings suggest that the proposed solution can complement existing
 technologies by supporting a wide area of business cases while, at the same time, importantly
 reducing costs.},
-	
+
 	author = {Nicolas Herbaut and Daniel N{\'e}gru}
 }
 
@@ -137,4 +146,14 @@ reducing costs.},
   title =         {A tutorial on blockchain and applications to secure
                    network control-planes},
   year =          {2016},
+}
+
+@article{grzegorczyk2002ordre,
+  title={Ordre juridique comme r{\'e}alit{\'e}},
+  author={Grzegorczyk, Christophe},
+  journal={Droits},
+  number={1},
+  pages={103--118},
+  year={2002},
+  publisher={Presses Universitaires de France}
 }
