--- a/cdn/bibliography.bib
+++ b/cdn/bibliography.bib
@@ -157,3 +157,11 @@ reducing costs.},
   year={2002},
   publisher={Presses Universitaires de France}
 }
+
+@article{lessig1999code,
+  title={Code is law},
+  author={Lessig, Lawrence},
+  journal={The Industry Standard},
+  volume={18},
+  year={1999}
+}
