--- a/cdn/bibliography.bib
+++ b/cdn/bibliography.bib
@@ -165,3 +165,89 @@ reducing costs.},
   volume={18},
   year={1999}
 }
+
+@article{raskin2016law,
+  title={The Law and Legality of Smart Contracts},
+  author={Raskin, Max},
+  year={2016}
+}
+
+
+@article{hansen2017legal,
+  title={Legal Aspects of Smart Contract Applications: Digital Asset Sales and Capital Markets},
+  author={Hansen, J Dax and Reyes, Carla L},
+  journal={Supply Chain Management, Land Registries, Government Records and Smart Cities, and Self-Sovereign Identity/Perkins Coie LLP//.},
+  year={2017}
+}
+
+
+@article{Pailler2018,
+title={Quel  encadrement pertinent  pour  les  Initial  Coin  Offerings ?},
+author={Pailler, Pauline },
+year={2018},
+journal={In Revue internationale des services financiers}
+}
+
+@article{Vamparys2018,
+title={Perspectives américaines sur la régulation des crypto-actifs.},
+author={Vamparys, Xavier},
+year={2018},
+journal={Bulletin Joly Bourse}
+}
+
+@article{mik2017smart,
+  title={Smart contracts: terminology, technical limitations and real world complexity},
+  author={Mik, Eliza},
+  journal={Law, Innovation and Technology},
+  volume={9},
+  number={2},
+  pages={269--300},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{blemus2017law,
+  title={Law and Blockchain: A Legal Perspective on Current Regulatory Trends Worldwide},
+  author={Blemus, St{\'e}phane},
+  year={2017},
+  journal={ Revue trimestrielle de droit financier }
+}
+
+@article{Cohen2017,
+title={The enforceability of Smart Contracts},
+author={Cohen, Alen West, Travis Parker, Chelsea},
+journal={In Georgetown Law Technology Review},
+year={2017},
+volume={1},
+Issue={2}
+}
+
+
+@article{Vauplane2016,
+author={Vauplane, Hubert},
+year={2016},
+title={La blockchain défiera-t-elle la règle ?},
+journal={Revue de Droit bancaire et financier},
+volume={6},
+issue={7}
+}
+
+
+@article{Vauplane2017,
+author={Vauplane, Hubert},
+year={Vauplane2017},
+title={Blockchain and Conflict of Laws},
+journal={Revue trimestrielle de droit financier},
+volume={4},
+issue={50}
+}
+
+@article{Vauplane2018,
+author={Vauplane, Hubert},
+year={2016},
+title={Blockchain et corporate governance : stimergie ou holacratie ?},
+journal={Revue Banque},
+volume={821},
+issue={16}
+}
